# plenum

./: .dockerignore  .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  typeshare.toml
.github/workflows/: bench.yml  cd.yml  ci.yml
dev/bench/: data.js
docs/: cors.md  db-plugins.md  env-vars.md  error-handling.md  interceptor-permissions.md  interceptors.md  interpolation.md  load-balancing.md  overlays.md  plugins.md  quickstart.md  ref-resolution.md  static-responses.md  timeouts.md  tls.md  validation.md
docs/writing-plugins/: dependencies.md  index.md  types.md  typescript-and-bundling.md
e2e/: .gitignore  deno.json  package-lock.json  package.json  tsconfig.fixtures.json  tsconfig.json  vitest.config.ts
e2e/benchmarks/: latency_bench.ts
e2e/fixtures/: README.md  openapi-body-limit.yaml  openapi-cors.yaml  openapi-ctx.yaml  openapi-interceptor-body.yaml  openapi-interceptor.yaml  openapi-not-implemented.yaml  openapi-per-op-upstream.yaml  openapi-plugin-mongodb.yaml  openapi-plugin-mysql.yaml  openapi-plugin-postgres.yaml  openapi-plugin.yaml  openapi-postgres.yaml  openapi-rate-limit.yaml  openapi-response-validation.yaml  openapi-static.yaml  openapi-timeout.yaml  openapi-tls.yaml  openapi-validation-override.yaml  openapi-validation-ref.yaml  openapi-validation.yaml  openapi.yaml  overlay-bad-upstream-typo.yaml  overlay-body-limit-gateway.yaml  overlay-body-limit-interceptor.yaml  overlay-cors.yaml  overlay-ctx.yaml  overlay-gateway-error-interceptor.yaml  overlay-gateway-error-throw-interceptor.yaml  (+78 more)
gateway-core/: Cargo.toml
gateway-core/benches/: gateway.rs
gateway-core/js/: add-header.js  build.js  build.ts  package-lock.json  package.json
gateway-core/js/src/: deno.json
gateway-core/js/src/plugins/: postgres.ts  postgres_test.ts
gateway-core/js/src/plugins/shared/: errors.ts  errors_test.ts  interpolate.ts  interpolate_test.ts  shape.ts  shape_test.ts
gateway-core/src/: lib.rs  main.rs
gateway-core/src/config/: interceptor.rs  mod.rs  parser.rs  server.rs  upstreams.rs  validation.rs
gateway-core/src/ctx/: mod.rs
gateway-core/src/headers/: mod.rs
gateway-core/src/interceptor/: mod.rs
gateway-core/src/openapi/: operation.rs
gateway-core/src/path_match/: mod.rs  module_resolver.rs
gateway-core/src/proxy_utils/: mod.rs
gateway-core/src/upstream_http/: mod.rs
gateway-core/src/upstream_plugin/: mod.rs
gateway-core/src/validation/: error.rs  schema.rs
gateway-core/test/: overlay-1.yaml  overlay-2.yaml
gateway-core/tests/: e2e.rs
gateway-core/tests/fixtures/: echo_plugin.js  validate_plugin.js
interceptors/: esbuild.mjs  package-lock.json  package.json  tsconfig.json
oas-query/: CHANGELOG.md  Cargo.toml
openapi-overlay/: CHANGELOG.md  Cargo.toml
openapi-overlay/src/: lib.rs
openapi-overlay/src/apply/: error.rs  merge.rs  mod.rs
openapi-overlay/src/spec/: action.rs  info.rs  mod.rs  overlay.rs  spec_extensions.rs
opengateway-js-runtime/: Cargo.toml
opengateway-js-runtime/benches/: js_runtime.rs
opengateway-js-runtime/node-runtime/: package-lock.json  package.json
opengateway-js-runtime/node-runtime/interceptors/: add-header.js  auth-apikey.js  validate-request.js
opengateway-js-runtime/src/: 01_net.js  02_tls.js  external.rs  lib.rs  loader.rs  ops.rs  permissions.rs  runtime_api.js  runtime_entry.js  stub_node_crypto_constants.js  stub_node_timers.js  stub_quic.js  stub_telemetry.js  stub_telemetry_util.js  types.rs  worker.rs
opengateway-js-runtime/tests/: external_runtime.rs
opengateway-js-runtime/tests/fixtures/: hello.js  infinite.js  mixed.js  throws.js  two_functions.js
opengateway-sandbox/: Cargo.toml
plenum-config/: Cargo.toml
plenum-config/src/: config_value.rs  context_ref.rs  context_template.rs  interpolation.rs  lib.rs  parser.rs  request_data.rs
plenum-config/src/duration/: mod.rs
plenum-core/: CHANGELOG.md  Cargo.toml
plenum-core/benches/: gateway.rs
plenum-core/src/: gateway_error.rs  lib.rs  main.rs  request_timeout.rs  runtime_builder.rs
plenum-core/src/access_log/: mod.rs
plenum-core/src/config/: cors.rs  interceptor.rs  mod.rs  parser.rs  rate_limit.rs  server.rs  upstreams.rs
plenum-core/src/config/interpolation/: mod.rs
plenum-core/src/cors/: mod.rs
plenum-core/src/ctx/: mod.rs
plenum-core/src/gateway_error/: mod.rs
plenum-core/src/health_check/: mod.rs  passive.rs
plenum-core/src/interceptor/: mod.rs
plenum-core/src/load_balancing/: builder.rs  mod.rs  pool.rs
plenum-core/src/openapi/: operation.rs
plenum-core/src/path_match/: mod.rs  module_resolver.rs  runtime_builder.rs
plenum-core/src/phases/: before_upstream.rs  gateway_error.rs  mod.rs  on_request.rs  on_response.rs  upstream_peer.rs
plenum-core/src/phases/on_request_headers/: mod.rs
plenum-core/src/proxy_utils/: mod.rs
plenum-core/src/rate_limit/: mod.rs
plenum-core/src/request_context/: config_value.rs  mod.rs
plenum-core/src/request_timeout/: mod.rs
plenum-core/src/runtime_builder/: mod.rs
plenum-core/src/tracing_setup/: mod.rs
plenum-core/src/upstream/: builder.rs  mod.rs
plenum-core/src/upstream_http/: mod.rs
plenum-core/src/upstream_plugin/: mod.rs  streaming.rs  types.rs
plenum-core/test/: openapi.yaml  overlay-1.yaml  overlay-2.yaml
plenum-core/tests/: e2e.rs
plenum-core/tests/fixtures/: noop.js  validate_interceptor.js
plenum-ipc/: Cargo.toml
plenum-ipc/src/: codec.rs  lib.rs  transport.rs
plenum-js-runtime/: CHANGELOG.md  Cargo.toml
plenum-js-runtime/node-runtime/: package-lock.json  package.json  server.js
plenum-js-runtime/node-runtime/interceptors/: rate-limit-rejector.js  validate-request.js  validate-response.js
plenum-js-runtime/node-runtime/plugins/: mongodb.js  mysql.js  noop.js  postgres.js
plenum-js-runtime/src/: external.rs  lib.rs  types.rs
plenum-js-runtime/tests/: external_runtime.rs
plenum-sandbox/: CHANGELOG.md  Cargo.toml
sdk/: package-lock.json  package.json  plenum.ts  tsconfig.json
(+226 files in other folders)
