[package]
name = "gateway-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait="0.1"
pingora-core="0.8"
oas3={ version="0.20.1", features=["yaml-spec"] }
oapi-overlay={ version="^0", path="../openapi-overlay", features=["yaml"] }
serde="1.0"
serde_yaml_ng="0.9"
serde_json="1.0"
clap = { version = "4.5.60", features = ["derive", "env"] }
pingora-http = "0.8.0"
pingora-proxy = "0.8.0"
log = "0.4.29"
env_logger = "0.11.9"
matchit = "0.9.1"
http = "1.4.0"
jsonschema = "0.45"
bytes = "1"

[dev-dependencies]
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
