[package]
name = "oapi-overlay"
version.workspace = true
edition = "2024"

[features]
yaml = ["dep:serde_yaml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7"
serde_yaml = { version = "0.9", optional = true }
thiserror = "2"

[dev-dependencies]
indoc = "2"
pretty_assertions = "1"
