[package]
name = "opengateway-js-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
deno_core = "0.395"
deno_error = "0.7"
tokio = { version = "1", features = ["sync", "rt", "time"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2"
ureq = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "js_runtime"
harness = false
