[package]
name = "opengateway-js-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "net", "process", "io-util"] }
rmp-serde = "1"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
opengateway-sandbox = { path = "../opengateway-sandbox" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
