[package]
name = "plenum-core"
version = "0.15.0"
edition = "2024"

[dependencies]
async-trait="0.1"
pingora-core = { version = "0.8", features = ["rustls"] }
oas3={ version="0.20.1", features=["yaml-spec"] }
oapi-overlay={ version="0.2.0", path="../openapi-overlay", features=["yaml"] }
serde="1.0"
ts-rs = { version = "10", features = ["serde-compat"] }
serde_yaml_ng="0.9"
serde_json="1.0"
clap = { version = "4.5.60", features = ["derive", "env"] }
pingora-http = "0.8.0"
pingora-proxy = { version = "0.8.0", features = ["rustls"] }
pingora-timeout = "0.8"
pingora-limits = "0.8"
pingora-load-balancing = { version = "0.8", features = ["rustls"] }
log = "0.4.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
matchit = "0.9.1"
http = "1.4.0"
bytes = "1"
plenum-js-runtime = { path = "../plenum-js-runtime" }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7"
parking_lot = "0.12"
form_urlencoded = "1"
oas-query = { path = "../oas-query" }

[dev-dependencies]
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["otel"]
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[[bench]]
name = "gateway"
harness = false
