[package]
name = "plenum-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures = "0.3"
rmp-serde = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "6"
