[package]
name = "plenum-js-runtime"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "net", "process", "io-util"] }
rmp-serde = "1"
base64 = "0.22"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
arc-swap = "1"
plenum-ipc = { path = "../plenum-ipc" }
plenum-sandbox = { path = "../plenum-sandbox" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
